[gd_scene load_steps=30 format=3 uid="uid://bckrbscq7i46c"]

[ext_resource type="Script" uid="uid://clfhwo5k0rc5o" path="res://test_scenes/player_2d.gd" id="1_2ugl5"]
[ext_resource type="Script" uid="uid://dkgvd5u54irye" path="res://test_scenes/player_camera_2d.gd" id="2_rrv6s"]
[ext_resource type="Texture2D" uid="uid://dw1kwwcx5xkoq" path="res://game_art_resources/test_scene.png" id="3_ifg33"]
[ext_resource type="Script" uid="uid://dsnyquodhwsd2" path="res://test_scenes/rich_text_label.gd" id="3_kymn1"]
[ext_resource type="Script" uid="uid://b47j2fk5gv23a" path="res://test_scenes/camera_3d.gd" id="5_s84uv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_54n8g"]
size = Vector2(8, 16)

[sub_resource type="CanvasTexture" id="CanvasTexture_54n8g"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_2ugl5"]
a = Vector2(0, -8)
b = Vector2(0, 8)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_kymn1"]
a = Vector2(3, 0)
b = Vector2(-5, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_kymn1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kymn1"]
size = Vector2(48, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ifg33"]
size = Vector2(320, 8)

[sub_resource type="CircleShape2D" id="CircleShape2D_kymn1"]
radius = 32.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rrv6s"]
size = Vector2(24, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vqllv"]
size = Vector2(79, 20)

[sub_resource type="Gradient" id="Gradient_ifg33"]
offsets = PackedFloat32Array(0.621145, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_ifg33"]

[sub_resource type="NoiseTexture3D" id="NoiseTexture3D_s84uv"]
color_ramp = SubResource("Gradient_ifg33")
noise = SubResource("FastNoiseLite_ifg33")

[sub_resource type="FogMaterial" id="FogMaterial_ifg33"]
density = 4.0284
emission = Color(0.0725366, 0.632022, 0.760177, 1)
height_falloff = 1.41421e-05
density_texture = SubResource("NoiseTexture3D_s84uv")

[sub_resource type="Environment" id="Environment_ifg33"]
glow_enabled = true
volumetric_fog_enabled = true

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_rrv6s"]

[sub_resource type="PlaneMesh" id="PlaneMesh_s84uv"]
size = Vector2(3.2, 1.8)

[sub_resource type="BoxMesh" id="BoxMesh_s84uv"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s84uv"]

[sub_resource type="BoxMesh" id="BoxMesh_rrv6s"]

[sub_resource type="Gradient" id="Gradient_s84uv"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_rrv6s"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_s84uv"]
color_ramp = SubResource("Gradient_s84uv")
noise = SubResource("FastNoiseLite_rrv6s")

[sub_resource type="ViewportTexture" id="ViewportTexture_kymn1"]
viewport_path = NodePath("3DForegroundViewport")

[node name="TestScene" type="Node2D"]

[node name="Player2D" type="CharacterBody2D" parent="."]
script = ExtResource("1_2ugl5")

[node name="PlayerCollision2D" type="CollisionShape2D" parent="Player2D"]
shape = SubResource("RectangleShape2D_54n8g")

[node name="Sprite2D" type="Sprite2D" parent="Player2D"]
position = Vector2(-4, -8)
scale = Vector2(8, 16)
texture = SubResource("CanvasTexture_54n8g")

[node name="LeftWallDetectionArea2D" type="Area2D" parent="Player2D"]
position = Vector2(-5, 0)

[node name="LeftWallDetectionCollisionShape2D" type="CollisionShape2D" parent="Player2D/LeftWallDetectionArea2D"]
shape = SubResource("SegmentShape2D_2ugl5")

[node name="RightWallDetectionArea2D" type="Area2D" parent="Player2D"]
position = Vector2(5, 0)

[node name="RightWallDetectionCollisionShape2D" type="CollisionShape2D" parent="Player2D/RightWallDetectionArea2D"]
shape = SubResource("SegmentShape2D_2ugl5")

[node name="GroundDetectionArea2D" type="Area2D" parent="Player2D"]
position = Vector2(0, 9)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2D/GroundDetectionArea2D"]
position = Vector2(1, 0)
shape = SubResource("SegmentShape2D_kymn1")

[node name="PlayerCamera2D" type="Camera2D" parent="Player2D"]
position_smoothing_speed = 50.0
script = ExtResource("2_rrv6s")

[node name="DebugTextLabel" type="RichTextLabel" parent="Player2D/PlayerCamera2D"]
offset_left = -155.0
offset_top = -86.0
offset_right = 71.0
offset_bottom = 297.0
fit_content = true
scroll_active = false
autowrap_mode = 0
script = ExtResource("3_kymn1")

[node name="WorldWalls" type="StaticBody2D" parent="."]
position = Vector2(1, 90)

[node name="Left" type="CollisionShape2D" parent="WorldWalls"]
position = Vector2(-162, -96)
rotation = 1.5708
shape = SubResource("WorldBoundaryShape2D_kymn1")

[node name="Right" type="CollisionShape2D" parent="WorldWalls"]
position = Vector2(160, -96)
rotation = -1.5708
shape = SubResource("WorldBoundaryShape2D_kymn1")

[node name="Up" type="CollisionShape2D" parent="WorldWalls"]
position = Vector2(0, -184)
rotation = -3.14159
shape = SubResource("WorldBoundaryShape2D_kymn1")

[node name="Down" type="CollisionShape2D" parent="WorldWalls"]
shape = SubResource("WorldBoundaryShape2D_kymn1")

[node name="TestScene" type="Sprite2D" parent="."]
texture = ExtResource("3_ifg33")

[node name="StaticBody2D" type="StaticBody2D" parent="TestScene"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TestScene/StaticBody2D"]
position = Vector2(-80, 66)
shape = SubResource("RectangleShape2D_kymn1")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="TestScene/StaticBody2D"]
position = Vector2(0, 86)
shape = SubResource("RectangleShape2D_ifg33")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="TestScene/StaticBody2D"]
position = Vector2(-104, -30)
shape = SubResource("CircleShape2D_kymn1")

[node name="TestScene2" type="Sprite2D" parent="."]
position = Vector2(5, 15)

[node name="StaticBody2D" type="StaticBody2D" parent="TestScene2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TestScene2/StaticBody2D"]
position = Vector2(-5, 7.5)
shape = SubResource("RectangleShape2D_rrv6s")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="TestScene2/StaticBody2D"]
position = Vector2(116.5, 7)
shape = SubResource("RectangleShape2D_vqllv")

[node name="3DForegroundViewport" type="SubViewport" parent="."]
snap_2d_transforms_to_pixel = true
size = Vector2i(320, 180)

[node name="OmniLight3D" type="OmniLight3D" parent="3DForegroundViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.271509, 0.189781, 1.94354)

[node name="FogVolume" type="FogVolume" parent="3DForegroundViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.245572, 0.290095, -0.0921001)
material = SubResource("FogMaterial_ifg33")

[node name="WorldEnvironment" type="WorldEnvironment" parent="3DForegroundViewport"]
environment = SubResource("Environment_ifg33")

[node name="OmniLight3D2" type="OmniLight3D" parent="3DForegroundViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.26437, 0.379562, 2.77403)

[node name="Camera3D" type="Camera3D" parent="3DForegroundViewport"]
auto_translate_mode = 1
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.15)
attributes = SubResource("CameraAttributesPractical_rrv6s")
current = true
size = 3.2
script = ExtResource("5_s84uv")

[node name="CameraCalibrationPlate" type="MeshInstance3D" parent="3DForegroundViewport"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("PlaneMesh_s84uv")
skeleton = NodePath("../Camera3D")

[node name="MidgroundPlate" type="MeshInstance3D" parent="3DForegroundViewport"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.358257)
visible = false
mesh = SubResource("PlaneMesh_s84uv")
skeleton = NodePath("../Camera3D")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="3DForegroundViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.07242, -0.207277, 0.530075)
mesh = SubResource("BoxMesh_s84uv")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="3DForegroundViewport/MeshInstance3D2"]
transform = Transform3D(0.824531, 0.429222, 0.368668, 0, 0.651569, -0.758589, -0.565816, 0.625481, 0.537239, 0.448946, -0.424747, -0.779351)
mesh = SubResource("BoxMesh_s84uv")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="3DForegroundViewport/MeshInstance3D2/MeshInstance3D2"]
transform = Transform3D(0.652837, -0.67284, 0.34798, 0.753147, 0.527376, -0.39325, 0.0810777, 0.518808, 0.851037, 1.44449, 1.21926, 0.615141)
mesh = SubResource("BoxMesh_s84uv")

[node name="MeshInstance3D" type="MeshInstance3D" parent="3DForegroundViewport"]
transform = Transform3D(0.227407, 0, 0, 0, 0.114345, 0, 0, 0, 2.21585, 0.00432539, -0.261271, 0.860974)
material_overlay = SubResource("StandardMaterial3D_s84uv")
mesh = SubResource("BoxMesh_rrv6s")
skeleton = NodePath("../MeshInstance3D2")

[node name="Sprite3D" type="Sprite3D" parent="3DForegroundViewport"]
transform = Transform3D(0.227407, 0, 0, 0, 0.0543694, 1.94933, 0, -0.100592, 1.05361, 0.00432539, -0.261271, 0.860974)
pixel_size = 0.0125
transparent = false
texture_filter = 0
texture = SubResource("NoiseTexture2D_s84uv")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
offset_left = -160.0
offset_top = -90.0
offset_right = 160.0
offset_bottom = 90.0
texture = SubResource("ViewportTexture_kymn1")

[connection signal="position_updated" from="Player2D" to="3DForegroundViewport/Camera3D" method="_on_player_2d_position_updated"]
[connection signal="velocity_updated" from="Player2D" to="Player2D/PlayerCamera2D/DebugTextLabel" method="_on_player_2d_velocity_updated"]
[connection signal="body_entered" from="Player2D/LeftWallDetectionArea2D" to="Player2D" method="_on_left_wall_detection_area_2d_body_entered"]
[connection signal="body_exited" from="Player2D/LeftWallDetectionArea2D" to="Player2D" method="_on_left_wall_detection_area_2d_body_exited"]
[connection signal="body_entered" from="Player2D/RightWallDetectionArea2D" to="Player2D" method="_on_right_wall_detection_area_2d_body_entered"]
[connection signal="body_exited" from="Player2D/RightWallDetectionArea2D" to="Player2D" method="_on_right_wall_detection_area_2d_body_exited"]
[connection signal="body_entered" from="Player2D/GroundDetectionArea2D" to="Player2D" method="_on_ground_detection_area_2d_body_entered"]
[connection signal="body_exited" from="Player2D/GroundDetectionArea2D" to="Player2D" method="_on_ground_detection_area_2d_body_exited"]
